refactor: unify inline and component schemas

--- a/internal/opendpi/testdata/circular-refs.yaml
+++ b/internal/opendpi/testdata/circular-refs.yaml
@@ -9,15 +9,14 @@ info:
 
 connections:
   database:
-    protocol: postgresql
+    type: postgresql
     host: localhost:5432
 
 ports:
   nodes:
     description: Tree nodes with parent/child refs
     connections:
-      - connection:
-          $ref: "#/connections/database"
+      - connection: "#/connections/database"
         location: nodes
     schema:
       $ref: "#/components/schemas/Node"
