--- a/internal/opendpi/testdata/with-components.yaml
+++ b/internal/opendpi/testdata/with-components.yaml
@@ -10,22 +10,21 @@ info:
 
 connections:
   users_db:
-    protocol: postgresql
+    type: postgresql
     host: users.db.example.com:5432
     variables:
       database: users
       schema: public
 
   activity_stream:
-    protocol: kafka
+    type: kafka
     host: kafka.example.com:9092
 
 ports:
   users:
     description: User account data
     connections:
-      - connection:
-          $ref: "#/connections/users_db"
+      - connection: "#/connections/users_db"
         location: users
     schema:
       $ref: "#/components/schemas/User"
@@ -33,8 +32,7 @@ ports:
   user_profiles:
     description: Extended user profile information
     connections:
-      - connection:
-          $ref: "#/connections/users_db"
+      - connection: "#/connections/users_db"
         location: user_profiles
     schema:
       $ref: "#/components/schemas/UserProfile"
@@ -42,8 +40,7 @@ ports:
   activity_log:
     description: User activity events
     connections:
-      - connection:
-          $ref: "#/connections/activity_stream"
+      - connection: "#/connections/activity_stream"
         location: user-activity-v1
     schema:
       $ref: "#/components/schemas/ActivityEvent"
@@ -51,8 +48,7 @@ ports:
   login_events:
     description: User login/logout events
     connections:
-      - connection:
-          $ref: "#/connections/activity_stream"
+      - connection: "#/connections/activity_stream"
         location: user-auth-events
     schema:
       $ref: "#/components/schemas/AuthEvent"
